--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,5 +2,6 @@
   <%= f.text_field :username %>
   <%= @user.email %>
   <%= f.password_field :password, placeholder: 'fill to change pw' %>
+  <%= f.password_field :password_confirmation, placeholder: 'pw confirmation' %>
   <%= f.submit %>
 <% end %>
