--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
 <%= form_for @user do |f| %>
   <%= f.email_field :email, placeholder: 'email' %>
-  <%= f.password_field :password, placeholder: 'pw' %>
+  <%= f.password_field :password, placeholder: 'password' %>
+  <%= f.password_field :password_confirmation, placeholder: 'password_confirmation' %>
   <%= f.submit %>
 <% end %>
