--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+    <header>
+      <% flash.each do |name, msg| %>
+        <%= name %>:<%= msg %>
+      <% end %>
+    </header>
     <%= yield %>
   </body>
 </html>
