--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <body>
     <header>
       <%= link_to 'Logout', logout_path if logged_in? %>
+      <%= link_to 'Sign Up', new_user_path unless logged_in? %>
       <%= link_to 'Reset Password', new_reset_password_path unless logged_in? %>
     </header>
     <section>
