--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <header>
       <%= link_to 'Logout', logout_path if logged_in? %>
       <%= link_to 'Sign Up', new_user_path unless logged_in? %>
-      <%= link_to 'Reset Password', new_reset_password_path unless logged_in? %>
+      <%= link_to 'Forgot Password', new_reset_password_path unless logged_in? %>
     </header>
     <section>
       <% flash.each do |name, msg| %>
